cftemplates/VPCCreation.yml
---
Description:  Simple VPC setup-
  Create VPC1 Private Subnet 
  Create VPC2 Private/Public Subnet
  Creates S3 Bucket, EC2 instances, IAM roles
Parameters:
  AMIId:  
    Description: AMI ID being used
    Type: String
    Default: 'ami-0fc61db8544a617ed'
  EC2KeyPair:  
    Description: EC2 KeyPair for SSH access.
      This should not be needed beyond development purpose
    Type: String
    Default: 'revtest'
  S3BucketName:  
    Description: S3 Bucket to be created.
    Type: String
    Default: 'projectssamples'
Resources:
  ## Create VPC's      
  VPC1:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.1.0.0/16
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      InstanceTenancy: 'default'
      Tags:
        - Key: Name
          Value: VPC1
        - Key: AppHosts
          Value: Apache
  VPC2:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.2.0.0/16
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      InstanceTenancy: 'default'
      Tags:
        - Key: Name
          Value: VPC2
        - Key: AppHosts
          Value: Ping

  VPC1Subnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC1
      CidrBlock: 10.1.0.0/24
      Tags:
        - Key: Name
          Value: PrivateSubnetVPC1
        - Key: Application
          Value: ApacheWebserver
        - Key: SubnetType
          Value: Private

  VPC1Subnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC1
      CidrBlock: 10.1.1.0/24
      Tags:
        - Key: Name
          Value: PublicSubnetVPC1
        - Key: Application
          Value: ApacheWebNATGateway
        - Key: SubnetType
          Value: Public
       
  VPC2Subnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC2
      CidrBlock: 10.2.0.0/24
      Tags:
        - Key: Name
          Value: PublicSubnetVPC2
        - Key: Application
          Value: HealthCheck
        - Key: SubnetType
          Value: Public

  ## Internet Gateway for Subnet VPC1Subnet2          
  InternetGatewayVPC1Subnet2:          
    Type: AWS::EC2::InternetGateway
    Properties: 
      Tags: 
        - Key: Name
          Value: IGWVPC1Subnet2
        - Key: Application
          Value: ApacheWebNATGateway
        - Key: Association
          Value: VPC1Subnet2
  ## Internet Gateway for Subnet VPC2Subnet1          
  InternetGatewayVPC2Subnet1:
    Type: AWS::EC2::InternetGateway
    Properties: 
      Tags: 
        - Key: Name
          Value: IGWVPC2Subnet1
        - Key: Application
          Value: ApacheWebNATGateway
        - Key: Association
          Value: VPC2Subnet1
  ## Internet Gateway attachments
  AttachGatewayIGW1VPC1:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC1
      InternetGatewayId: !Ref InternetGatewayVPC1Subnet2 

  AttachGatewayIGW2VPC2:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC2
      InternetGatewayId: !Ref InternetGatewayVPC2Subnet1

  ## NAT Gatweways
  NATGatewayVPC1Subnet2:
   Type: AWS::EC2::NatGateway
   Properties:
      AllocationId: !GetAtt NatGatewayEIP.AllocationId
      SubnetId: !Ref VPC1Subnet2
      Tags: 
        - Key: Name
          Value: NatGatewayVPC1
        - Key: Application
          Value: Apache
        - Key: Association
          Value: VPC1Subnet2

  ## Nat Gateway EIP       
  NatGatewayEIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc 
  ## Route Tables
  RouteTableVPC1Subnet1:
    Type: AWS::EC2::RouteTable
    Properties: 
      VpcId: !Ref VPC1
      Tags: 
        - Key: Name
          Value: RouteTableVPC1Subnet1
        - Key: Application
          Value: Apache
        - Key: Association
          Value: VPC1Subnet1
  RouteTableVPC1Subnet2:
    Type: AWS::EC2::RouteTable
    Properties: 
      VpcId: !Ref VPC1
      Tags: 
        - Key: Name
          Value: RouteTableVPC1Subnet2
        - Key: Application
          Value: Apache
        - Key: Association
          Value: VPC1Subnet2
  RouteTableVPC2Subnet1:
    Type: AWS::EC2::RouteTable
    Properties: 
      VpcId: !Ref VPC2
      Tags: 
        - Key: Name
          Value: RouteTableVPC2
        - Key: Application
          Value: Apache
        - Key: Association
          Value: VPC2Subnet1
  ## Routes
  RouteTableVPC1Subnet2Rte1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTableVPC1Subnet2
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGatewayVPC1Subnet2

  RouteTableVPC1Subnet1Rte1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTableVPC1Subnet1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGatewayVPC1Subnet2

  RouteTableVPC2Subnet1Rte1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTableVPC2Subnet1
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGatewayVPC2Subnet1

  VPC1Subnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref VPC1Subnet1
      RouteTableId: !Ref RouteTableVPC1Subnet1

  VPC1Subnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref VPC1Subnet2
      RouteTableId: !Ref RouteTableVPC1Subnet2

  VPC2Subnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref VPC2Subnet1
      RouteTableId: !Ref RouteTableVPC2Subnet1


  VPCPeeringConnection1:
    Type: 'AWS::EC2::VPCPeeringConnection'
    Properties:
      VpcId: !Ref VPC1
      PeerVpcId: !Ref VPC2

  PeeringRouteVPC1:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref RouteTableVPC2Subnet1
      DestinationCidrBlock: 10.1.0.0/16
      VpcPeeringConnectionId: !Ref VPCPeeringConnection1

  PeeringRouteVPC2:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref RouteTableVPC1Subnet1
      DestinationCidrBlock: 10.2.0.0/16
      VpcPeeringConnectionId: !Ref VPCPeeringConnection1

  SecurityGroupVPC1:
    Type: AWS::EC2::SecurityGroup
    Properties:
        GroupDescription: Security Group for VPC1
        VpcId: !Ref VPC1
        SecurityGroupIngress:
          - IpProtocol: tcp
            FromPort: 80
            ToPort: 80
            CidrIp: 0.0.0.0/0
          - IpProtocol: tcp
            FromPort: 22
            ToPort: 22
            CidrIp: 0.0.0.0/0
        Tags:
          - Key: Name
            Value: SG_VPC1
          - Key: Applications
            Value: WebServer
    
  SecurityGroupVPC2:
    Type: AWS::EC2::SecurityGroup
    Properties:
        GroupDescription: Security Group for VPC2
        VpcId: !Ref VPC2
        SecurityGroupIngress:
          - IpProtocol: tcp
            FromPort: 80
            ToPort: 80
            CidrIp: 0.0.0.0/0
        Tags:
          - Key: Name
            Value: SG_VPC2
          - Key: Applications
            Value: WebServerProbe
  SecurityGroupSSHDeveloper:
    Type: AWS::EC2::SecurityGroup
    Properties:
        GroupDescription: Security Group for VPC2
        VpcId: !Ref VPC2
        SecurityGroupIngress:
          - IpProtocol: tcp
            FromPort: 80
            ToPort: 80
            CidrIp: 0.0.0.0/0
          - IpProtocol: tcp
            FromPort: 22 
            ToPort: 22 
            CidrIp: 0.0.0.0/0
        Tags:
          - Key: Name
            Value: SG_Developer
          - Key: Applications
            Value: Developer SSH

  ## S3 Bucket           
  S3Bucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: !Ref S3BucketName

  IAMS3ConfigPolicy:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: S3EC2MinimalAccess
      Roles: [!Ref EC2PingRole]
      PolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Action:
              - 's3:GetObject'
              - 's3:GetObjectTagging'
              - 's3:GetObjectVersionTagging'
              - 's3:PutObject'
              - 's3:PutObjectTagging'
              - 's3:PutObjectVersionTagging'
            Resource:  !Join ["/", [!GetAtt S3Bucket.Arn, "*"]]
            Effect: Allow
            Sid: ReadWriteToS3 
          - Action:
              - 's3:ListBucket'
            Resource: !GetAtt S3Bucket.Arn
            Effect: Allow
            Sid: ListS3
  IAMCWPolicy:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: EC2CloudWatchAccess
      Roles: [!Ref EC2PingRole]
      PolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Sid: WriteToLogStreams
            Effect: Allow
            Action:
              - 'logs:CreateLogGroup'
              - 'logs:CreateLogStream'
              - 'logs:PutLogEvents'
            Resource: "*"

  ## EC2  IAM Instance Profile
  EC2PingRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: EC2PingRole
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
        - Effect: Allow
          Principal:
            Service:
            - ec2.amazonaws.com
          Action:
          - sts:AssumeRole
      Path: "/"
  EC2PingInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: "/"
      Roles:
      - !Ref EC2PingRole
      InstanceProfileName: EC2PingProfile
      
Outputs:
  IAMRoleCreated:
    Description: The EC2 instance role created
    Value: !Ref EC2PingRole
  IAMRoleARNCreated:
    Description: The EC2 instance role created
    Value: !GetAtt EC2PingRole.Arn
  IAMProfileCreated:
    Description: The EC2 instance profile created
    Value: !Ref EC2PingInstanceProfile
  IAMProfileARNCreated:
    Description: The EC2 instance role created
    Value: !GetAtt EC2PingInstanceProfile.Arn
  PrivateSecurityGroupVPC1:
    Description: Private Security Group in VPC1
    Value: !GetAtt SecurityGroupVPC1.GroupId
  PrivateSecurityGroupVPC2:
    Description: Private Security Group in VPC2
    Value: !GetAtt SecurityGroupVPC2.GroupId
  SSHSecurityGroupVPC2:
    Description: SSH Security Group in VPC2
    Value: !GetAtt SecurityGroupSSHDeveloper.GroupId
  VPC1Subnet1:
    Description: Pvt Subnet Pvt VPC, VPC1
    Value: !Ref VPC1Subnet1
  VPC1Subnet2:
    Description: Public Subnet Pvt VPC, VPC1
    Value: !Ref VPC1Subnet2
  VPC2Subnet1:
    Description: Public Subnet, Public VPC
    Value: !Ref VPC2Subnet1
